--- a/app/elements/greeting/greeting.html
+++ b/app/elements/greeting/greeting.html
@@ -4,15 +4,13 @@
 <dom-module id="home-greeting">
   	<template>
 		<h2 class="page-title">Welcome</h2>
-		<p class="subhead">Meetup Planner</p>
-		<p>This was completed utilizing the polymer starter kit in to progress through the udacity senior front end developer course</p>
+		<p class="subhead">This was completed utilizing the polymer starter kit in to progress through the udacity senior front end developer course</p>
 	</template>
 	<script>
 	(function() {
       'use strict';
-
       Polymer({
-        	is: 'home-greeting' 
+        	is: 'home-greeting'
     	});
     })();
   </script>
