--- a/app/elements/meetup-list/meetup-list.html
+++ b/app/elements/meetup-list/meetup-list.html
@@ -13,14 +13,14 @@
     </style>
     <firebase-collection
       order-by-child="height" location="https://dinosaur-facts.firebaseio.com/dinosaurs"
-      data="{{dinosaurs}}"></firebase-collection>
+      data="{{meetups}}"></firebase-collection>
 
     <h2 class="page-title">Meetups</h2>
 
-      <template is="dom-repeat" items="[[dinosaurs]]" as="dinosaur">
-        <h4><a href="{{baseUrl}}meetups/[[dinosaur.__firebaseKey__]]">[[dinosaur.__firebaseKey__]]</a></h4>
-        <span>Height: </span><span>[[dinosaur.height]]</span><span>m</span>
-      </template>
+    <template is="dom-repeat" items="[[meetups]]" as="meetup">
+      <h4><a href="{{baseUrl}}meetups/[[meetup.__firebaseKey__]]">[[meetup.__firebaseKey__]]</a></h4>
+      <span>Height: </span><span>[[meetup.height]]</span><span>m</span>
+    </template>
 
   </template>
 
