--- a/app/elements/create-user/create-user.html
+++ b/app/elements/create-user/create-user.html
@@ -74,7 +74,7 @@
 
       },
       createUserHandler: function (e) {
-        //Revalidate form,
+        //Revalidate form
 
         //if valid, then send data to firebase element
         app.$.auth.createUser(this.params.email, this.params.password);
