--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
     <firebase-auth
-      id="auth" 
+      id="auth"
       user="{{user}}"
       status-known="{{statusKnown}}"
       location="[[firebaseURL]]"
@@ -57,6 +57,11 @@
       on-error="onFirebaseError"
       on-login="onFirebaseLogin">
     </firebase-auth>
+    <firebase-collection
+      id="userData"
+      location="https://dinosaur-facts.firebaseio.com/{{user}}"
+      data="{{userData}}"
+    ></firebase-collection>
 
     <paper-toast id="errorToast"></paper-toast>
 
